--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.1.1",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
