--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "taari-mock-graph-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Mock GraphQL Web API with TypeScript, SQLite, and Prisma. 'npm run db:seed' will reset and reseed the database.",
   "main": "src/index.ts",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "dev:restart": "pkill -f ts-node-dev || true && sleep 1 && npm run dev",
+    "dev": "tsx watch src/index.ts",
+    "dev:restart": "pkill -f tsx || true && sleep 1 && npm run dev",
     "build": "tsc",
     "start": "node dist/index.js",
     "db:generate": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev",
     "db:seed": "ts-node prisma/seed.ts",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest",
+    "test:ci": "jest --runInBand --colors",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "graphql",
@@ -23,28 +28,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@apollo/server": "^4.12.2",
-    "@prisma/client": "^4.16.2",
-    "body-parser": "^1.20.2",
+    "@apollo/server": "^5.0.0",
+    "@as-integrations/express4": "^1.1.2",
+    "@prisma/client": "^5.12.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.1.1",
-    "sqlite3": "^5.1.6"
+    "graphql": "^16.8.0",
+    "pino": "^8.13.0",
+    "pino-pretty": "^10.0.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.0",
+    "@swc/jest": "^0.2.39",
     "@types/cors": "^2.8.17",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^18.19.123",
-    "@types/supertest": "^6.0.3",
-    "apollo-server": "^3.13.0",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.0",
+    "esbuild": "^0.25.9",
     "jest": "^30.0.5",
-    "prisma": "^4.15.0",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "prisma": "^5.12.0",
+    "tsx": "^4.20.0",
+    "typescript": "^5.3.0"
+  },
+  "overrides": {
+    "glob": "10.4.5"
   }
 }
