--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "esbuild": "^0.25.9",
     "jest": "^30.0.5",
     "prisma": "^5.12.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.0",
     "typescript": "^5.3.0"
   },
