Domain entity added along with some fixes

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dev:restart": "pkill -f tsx || true && sleep 1 && npm run dev",
     "build": "tsc",
     "start": "node dist/index.js",
-    "db:generate": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev",
-    "db:seed": "ts-node prisma/seed.ts",
+  "db:generate": "npx prisma generate",
+  "db:migrate": "npx prisma migrate dev",
+  "db:check": "npx prisma migrate status --schema=prisma/schema.prisma",
+  "db:seed": "ts-node prisma/seed.ts",
     "test": "jest",
     "test:ci": "jest --runInBand --colors",
     "test:watch": "jest --watch"
@@ -43,13 +44,13 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
-    "@types/node": "^20.5.0",
+    "@types/node": "^20.19.11",
     "esbuild": "^0.25.9",
     "jest": "^30.0.5",
     "prisma": "^5.12.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.9.2"
   },
   "overrides": {
     "glob": "10.4.5"
