--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dev:restart": "pkill -f tsx || true && sleep 1 && npm run dev",
     "build": "tsc",
     "start": "node dist/index.js",
-  "db:generate": "npx prisma generate",
-  "db:migrate": "npx prisma migrate dev",
-  "db:check": "npx prisma migrate status --schema=prisma/schema.prisma",
-  "db:seed": "ts-node prisma/seed.ts",
+    "db:generate": "npx prisma generate",
+    "db:migrate": "npx prisma migrate dev",
+    "db:check": "npx prisma migrate status --schema=prisma/schema.prisma",
+    "db:seed": "ts-node prisma/seed.ts",
     "test": "jest --runInBand",
     "test:ci": "jest --runInBand --colors",
     "test:watch": "jest --watch"
@@ -32,11 +32,13 @@
     "@apollo/server": "^5.0.0",
     "@as-integrations/express4": "^1.1.2",
     "@prisma/client": "^5.12.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "graphql": "^16.8.0",
     "pino": "^8.13.0",
-    "pino-pretty": "^10.0.0"
+    "pino-pretty": "^10.0.0",
+    "supertest": "^7.1.4"
   },
   "devDependencies": {
     "@swc/core": "^1.3.0",
@@ -48,6 +50,7 @@
     "esbuild": "^0.25.9",
     "jest": "^30.0.5",
     "prisma": "^5.12.0",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.0",
     "typescript": "^5.9.2"
