--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.19.11",
+    "dotenv": "^17.2.1",
     "esbuild": "^0.25.9",
     "jest": "^30.0.5",
     "prisma": "^5.12.0",
