--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@apollo/server": "^5.0.0",
     "@as-integrations/express4": "^1.1.2",
     "@prisma/client": "^5.12.0",
+    "apollo-server-errors": "^3.3.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
@@ -43,15 +44,18 @@
   "devDependencies": {
     "@swc/core": "^1.3.0",
     "@swc/jest": "^0.2.39",
+    "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.19.11",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.1",
     "esbuild": "^0.25.9",
     "jest": "^30.0.5",
     "prisma": "^5.12.0",
     "sqlite3": "^5.1.7",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.0",
     "typescript": "^5.9.2"
